# OpenJWC-webapi

./: .gitignore  AGENTS.md  README.md  admins.json  main.py  pyproject.toml  structure.txt
app/: crawler_wrapper.py
app/api/: chat.py  dependencies.py  notices.py  unbind.py
app/api/v1/: api_router.py
app/api/v1/admin/: apikeys.py  create_apikey.py  delete_apikey.py  get_settings.py  modify_password.py  notices.py  stats.py  submission.py  toggle_apikey.py  update_setting.py
app/api/v1/client/: device.py  get_labels.py  motto.py  notices.py  register.py  search.py  submission.py
app/core/: config.py  security.py
app/models/: models.py  schemas.py
app/services/: ai_service.py  db_interface.py  prompt_engine.py  sql_db_service.py  sql_mixin.py  submission_service.py  vector_db_service.py
app/services/sql_mixins/: admin_mixin.py  device_mixin.py  notice_mixin.py  submission_mixin.py  validation_mixin.py
app/utils/: logging_manager.py  openjwc_cli.py  ping_check.py  sysinfo_monitor.py
